# agent-plugins

plugins/active-descriptions/: Cargo.toml
plugins/active-descriptions/.claude-plugin/: plugin.json
plugins/active-descriptions/hooks/: hooks.json
plugins/active-descriptions/skills/describe/: SKILL.md
plugins/active-descriptions/src/: main.rs
plugins/jj-worktree-compat/.claude-plugin/: plugin.json
plugins/jj-worktree-compat/hooks/: jj-worktree-create.sh  jj-worktree-remove.sh
